# order-rest-serv

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  api.http  authserv.Dockerfile  cartserv.Dockerfile  docker-compose.yaml  gateway.Dockerfile  inventoryserv.Dockerfile  orderserv.Dockerfile  package.json
authserv/: Cargo.toml  generate_entity.sh
authserv/src/: dto.rs  error.rs  main.rs
authserv/src/handler/: login.rs  signup.rs
authserv/src/migration/: create_user_table.rs  mod.rs
authserv/src/repository/: auth.rs
authserv/src/utils/: jwt.rs
casbin/: policy.csv
common/: Cargo.toml
common/src/: lib.rs
common/src/db/: connection.rs
config/: Default.toml
gateway/: Cargo.toml
gateway/src/: main.rs
lib/: bus.rs  clients.rs  dto.rs  enums.rs  error.rs  events.rs  lib.rs  settings.rs
lib/config/: Development.toml  Production.toml
lib/db/: connection.rs  prelude.rs
lib/entity/: mod.rs
lib/handler/: login.rs  signup.rs
lib/repository/: auth.rs  mod.rs  product.rs
lib/utils/: init.rs  jwt.rs  mod.rs
migration/src/: create_cart_table.rs  create_product_table.rs  create_user_table.rs  lib.rs
public/: index.html
src/: App.js  main.rs
src/lib/: bus.rs  constants.rs  dto.rs  error.rs  mod.rs  settings.rs
src/lib/config/: Development.toml  Production.toml
src/lib/db/: connection.rs  mod.rs
src/lib/entity/: cart.rs  mod.rs  prelude.rs  product.rs  user.rs
src/lib/handler/: mod.rs
src/lib/handler/auth/: login.rs  mod.rs  signup.rs
src/lib/handler/cart/: add_product.rs  checkout.rs  mod.rs
src/lib/handler/inventory/: add_product.rs  mod.rs
src/lib/repository/: auth.rs  cart.rs  mod.rs  product.rs
src/lib/utils/: init.rs  jwt.rs
tests/: signup.rs
