[package]
name = "authserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono" ] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.57"

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = [
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` featrure
  "sqlx-mysql",         # `DATABASE_DRIVER` feature
]